--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.120.8",
+    "@react-three/fiber": "^8.17.12",
+    "@types/three": "^0.172.0",
     "axios": "^1.7.9",
+    "dat.gui": "^0.7.9",
     "embla-carousel-autoplay": "^8.5.1",
     "embla-carousel-react": "^8.5.1",
     "gsap": "^3.12.5",
@@ -17,8 +21,9 @@
     "mongoose": "^8.9.3",
     "next": "15.1.3",
     "razorpay": "^2.9.5",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "three": "^0.172.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
