--- a/package.json
+++ b/package.json
@@ -11,27 +11,21 @@
   "dependencies": {
     "@radix-ui/react-progress": "^1.1.1",
     "axios": "^1.7.9",
-    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-autoplay": "^8.5.1",
     "embla-carousel-react": "^8.5.1",
-    "framer-motion": "^12.0.6",
     "gsap": "^3.12.5",
-    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.469.0",
     "mongoose": "^8.9.3",
     "next": "15.1.3",
-    "next-auth": "^4.24.11",
-    "nodemailer": "^6.10.0",
     "qs": "^6.14.0",
     "razorpay": "^2.9.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7",
-    "three": "^0.172.0"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
